[package]
name = "roblox-api"
readme = "README.md"
description = "Roblox web api bindings"
repository = "https://github.com/elde-n/roblox-api"

version = "0.1.6"
edition = "2024"
license = "LGPL-3.0-only"

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls", "tungstenite?/native-tls"]
rustls-tls = ["reqwest/rustls", "tungstenite?/rustls-tls-native-roots"]
web-socket = ["dep:reqwest-websocket", "dep:futures-util"]

[dependencies]
base64 = "0.22.1"
chrono = "0.4.41"
futures-util = { version = "0.3.31", optional = true }
p256 = "0.13.2"
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "multipart",
    "stream",
    "query"
] }
reqwest-websocket = { version = "0.6.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
sha2 = "0.10.9"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
tungstenite = { version = "0.28.0", default-features = false, features = [
    "handshake"
], optional = true }
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
dotenvy_macro = "0.15.7"
tokio = { version = "1.27.0", features = ["full"] }
